Fix spacing and add user-select none

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ main {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content:space-between;
+    justify-content: space-between;
 }
 
 .left-container {
@@ -146,6 +146,7 @@ nav {
     cursor: pointer;
     box-shadow: inset 0 -7px 3px -3px rgba(0, 0, 0, .2);
     border-radius: 5px;
+    user-select: none;
 }
 
 .generate:hover {
@@ -172,4 +173,5 @@ nav {
     border: 1px solid var(--border-color);
     box-shadow: 0 2px 0 0 var(--border-color);
     border-radius: 5px;
+    user-select: none;
 }
